ncc/testsuite/positive/bug-0492.n
using System.Console;

public module Program
{
 Main() : void
 {
   def f = Foo; // error : typing fails on ambiguity between overloads
   _ = f(1);
 }

 public Foo[T](_ : T) : void { WriteLine("Fail!") }
 public Foo(_ : int)  : void { WriteLine("OK") }
}


/*
BEGIN-OUTPUT
OK
END-OUTPUT
*/