ncc/testsuite/negative/void-parm2.n
module M {
  public Main () : void // OK
  {
    [()].Iter ( // E: typing constraint on 'a not satisfied
      fun (_) {
      }
    )
  }
}
